--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
 
-    var worker = new Worker('exploit.js');
+    var worker = new Worker('Exploit.js');
 
 
       worker.postMessage(thecode);
