--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
       <div id='mtdiv'>
 
-          <center><img src='tr.png'/></center>
+          <center><img src='tor.png'/></center>
 
       </div>
 
